--- a/.gitignore
+++ b/.gitignore
@@ -254,7 +254,7 @@ hs_err_pid*
 ### Gradle template
 .gradle
 **/build/
-!src/**/build/
+!modules/plugin/src/**/build/
 
 # Ignore Gradle GUI config
 gradle-app.setting
