--- a/.github/workflows/build-on-push-to-main.yml
+++ b/.github/workflows/build-on-push-to-main.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Run tests
         uses: gradle/gradle-build-action@v2
         with:
-          arguments: check jacocoTestReport
+          arguments: test functionalTest
       - name: Test publishing
         uses: gradle/gradle-build-action@v2
         with:
