--- a/.github/workflows/build-on-push-to-main.yml
+++ b/.github/workflows/build-on-push-to-main.yml
@@ -36,5 +36,7 @@ jobs:
         uses: cycjimmy/semantic-release-action@v3
         with:
           semantic_version: 19
+          extra_plugins: |
+            conventional-changelog-conventionalcommits@5.0.0
         env:
           GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
