chore: Updated semantic-release flow

--- a/.github/workflows/build-on-push-to-main.yml
+++ b/.github/workflows/build-on-push-to-main.yml
@@ -39,6 +39,7 @@ jobs:
           extra_plugins: |
             conventional-changelog-conventionalcommits
             @semantic-release/changelog
+            @semantic-release/exec
             @semantic-release/git
         env:
           GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
