--- a/.releaserc.json
+++ b/.releaserc.json
@@ -1,9 +1,9 @@
 {
+  "ci": true,
+  "tagFormat": "${version}",
   "branches": [
     "main"
   ],
-  "ci": true,
-  "tagFormat": "${version}",
   "plugins": [
     [
       "@semantic-release/commit-analyzer",
@@ -15,6 +15,28 @@
       "@semantic-release/release-notes-generator",
       {
         "preset": "conventionalcommits"
+      }
+    ],
+    [
+      "@semantic-release/changelog",
+      {
+        "changelogFile": "CHANGELOG.md"
+      }
+    ],
+    [
+      "@semantic-release/exec",
+      {
+        "verifyReleaseCmd": "echo ${nextRelease.version} > .version"
+      }
+    ],
+    [
+      "@semantic-release/git",
+      {
+        "assets": [
+          ".version",
+          "CHANGELOG.md"
+        ],
+        "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
       }
     ],
     [
