--- a/.releaserc.json
+++ b/.releaserc.json
@@ -112,12 +112,7 @@
       }
     ],
     [
-      "@semantic-release/github",
-      {
-        "successComment": false,
-        "labels": false,
-        "releasedLabels": false
-      }
+      "@semantic-release/github"
     ]
   ]
 }
